@@ -1,5 +1,6 @@
     - parsing for superclass, interfaces, access modifiers
     - parsing differentiates signature-level reference types
+    - ForEach now checks more than just the primary classes
     - severity levels allow some rules to generate only warning instead of errors
     - verbose output shows classes in sorted order
 
